src/test/deca/context/valid/decl_int_assign.deca

// Description :
// Déclaration int et affectation, utilisation en println
//
// Resultats :
// ok
//

{
  int x = 5;
  println(x);
}