src/test/deca/context/invalid/parametres_meme_nom.deca
// Description :
// para avec meme noms impossible

// Resultats :
// Echec

class Coach {
    int strategie(int plan, int plan) {
        return plan;
    }
}

{ }